Fix background overflowing header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -20,6 +20,7 @@
 }
 
 .root {
+  overflow: hidden;
   position: relative;
 }
 
